# FastAPI-example

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: app.py  train.py
