[tool.poetry]
name = "fastapi_practice"
version = "0.1.0"
description = ""
authors = ["mf1611 <masashi.16@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
scikit-learn = "^0.24.2"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
lightgbm = "^3.2.1"
jupyterlab = "^3.0.16"
fastapi = "^0.66.0"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
